public/style.css
header {
	background-color: rgb(51, 199, 204);
}

body {
	background-color: #EEEEEE;
	font-family: Lato;
	padding: 0;
	margin: 0;
 }
 
 .site-title {
	color: #FFFFFF;
	display: block;
	float: none;
	width: 100%;
    text-align: center;
	font-size: 225%;
	font-weight: bold;
	padding: .5em 0;
	margin: 0;
	text-align: center;
}

a {
	text-decoration: none;
	color: #006600;
}

a:hover {
	color: rgb(51, 199, 204);
}

caption {
	font-size: 150%;
	font-weight: bold;
	padding: .25em;
}

.location-search-input {
	text-align:center;
	display: block;
	margin: 0 auto;
}

.location-table-container {
  width: 100%;
  margin: 0 auto;
}

.location-table {
	min-height: 50vh;
	max-width:75em;
	height: 40em;
	table-layout:fixed;
	margin:auto;
}
.location-name {
	font-weight: bold;
	font-size: 110%;
}
th, td {
	padding:.25em 0;
	border:1px solid #000;
	text-align:center;
}
thead {
	background:#LightGrey;
	display:table;
	overflow-x:hidden;
	width:100%;
	table-layout:fixed;
	text-align:center;
}
tbody {
	height:100%;
	overflow:auto;
	overflow-x:hidden;
	display:block;
	width:100%;
}
tbody tr {
	display:table;
	width:100%;
	table-layout:fixed;
	text-align:"center";
}

tbody tr:hover {
  background-color: lightblue;
  cursor: pointer;
}

th:hover {
  background-color: lightblue;
  cursor: pointer;
}

tr td:nth-child(1) {
  width: 10em;
}

tr td:nth-child(2) {
  width: 8em;
}

tr td:nth-child(3) {
  width: 8em;
}

tr td:nth-child(4) {
  width: 8em;
}

tr td:nth-child(5) {
  width: 5em;
}

tr td:nth-child(6) {
  width: 5em;
}

tr th:nth-child(1) {
  width: 10em;
}

tr th:nth-child(2) {
  width: 8em;
}

tr th:nth-child(3) {
  width: 8em;
}

tr th:nth-child(4) {
  width: 5em;
}

tr th:nth-child(5) {
  width: 5em;
}
.error-container {
  margin-top: 50px;
  text-align: center;
}

.error-container h2 {
  margin: 10px 0;
  font-size: 96px;
  font-weight: 100;
}

.error-container h3 {
  margin: 10px 0;
  font-size: 36px;
  font-weight: 400;
}

